# promptweaver-agent

./: .env.example  .gitignore  README.md  cli.ps1  cli.sh  launch_ui.ps1  main.py  pyproject.toml  run.ps1  run.sh  run_core_engine.ps1  run_core_engine.sh  run_test.ps1  server_log.txt  setup.ps1
.streamlit/: config.toml
.well-known/: agent.json
knowledge/: 00_blueprint_prompt_agent.md  Deepseek_cheatsheet.md  Gemini_Multiverse_prompt.md  God_prompt.md  Grok_cheeatsheet.md  NeuroPrompt_RAG_Logic.md  NeuroPrompt_Situational_Playbook_Full.md  The Universal Prompt Engineering Framework_ A Comp.md  best_practices_prompt_engineering_openai.md
output/: __structured_prompt_for_growing_an_email_newsletter_100_to_10_8fd0c5_2025-04-29T11-49-18.md  __structured_prompt_for_qa_automation_agent_development___c825bf_2025-04-29T11-16-27.md  ai_and_playwright_mcp_2025-04-25T16-05-55.md  ai_changing_qa_landscape_playwright_mcp_3e4cf6_2025-04-25T12-43-52.md  ai_driven_business_concept_generator__healthcare_niche_focus_8102f6_2025-04-30T10-54-48.md  ai_in_usa__strategic_landscape_analysis_and_policy_optimization_9d30a6_2025-04-25T18-39-17.md  build_a_production_ready_fully_automated_crewai_project_that_converts_226ff9_2025-04-24T19-48-53.md  help_me_understand_agent_to_agent_protocol_2025-04-25T15-49-10.md  print_on_demand_business_app_with_ai_design_generation_959e0a_2025-04-27T09-50-40.md  qa_automation_agent_for_bdd_testing_with_playwright_848dcb_2025-04-29T11-36-25.md  structured_prompt_for_google_s_agent_to_agent_protocol_crewai_and_f1615a_2025-04-26T12-20-39.md  (+4 more)
src/: api.py  (+3 more)
(+9 files in other folders)
