# pyproject.toml

[project]
name = "promptweaver"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "crewai",
  "docling>=2.30.0",
  "openai",
  "python-dotenv",
  "streamlit",  # Added for Streamlit UI
  "chromadb>=0.4.18",  # Required for knowledge storage
  "sentence-transformers>=2.2.2",  # Required for embeddings
  "unstructured>=0.10.30",  # Required for document processing
  "onnxruntime",  # Speeds up sentence-transformers
  "tiktoken",  # Required for token counting
  "fastapi",  # Added for API development
  "uvicorn",  # Added for ASGI server
  "aiohttp",  # Added for HTTP requests
  "pydantic"  # Added for data validation
]

[tool.crewai]
entry_point = "src/main.py"